dtext: fix [expand] block CSS on Safari.
Fix the default arrow added by the browser in the <details> element not being hidden in Safari.

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -180,6 +180,10 @@ div.prose {
         background-color: var(--dtext-details-summary-hover-background-color);
         cursor: pointer;
       }
+
+      &::-webkit-details-marker {
+        display: none;
+      }
     }
 
     > div {
